Added UI changes

--- a/acceptsuiteservice/WebApp/index_all.html
+++ b/acceptsuiteservice/WebApp/index_all.html
@@ -1,362 +1,434 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<meta name="description" content="">
-	<meta name="author" content="">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-	<title>Authorize.Net Accept Sample Application</title>
+    <title>Authorize.Net Accept Sample Application</title>
 
-	<!-- Bootstrap core CSS -->
-	<link href="scripts/css/bootstrap.min.css" rel="stylesheet">
- 
-	<style type="text/css">
-	body{
-		                                /*font-family:  Century Gothic,Regular!important;*/
-        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif!important;
-        /*background: url('images/AdobeStock_191284997.jpeg'); */
-        background: url('scripts/images/cartImages/background_cloth.jpg') no-repeat;
-        padding-top: 50px;
-        font-size: 14px;
-        background-size: 100% 100%;
-         background-attachment: fixed;
-         height: 100vh !important;
-         width: 100% !important;
-         overflow: hidden;
+    <!-- Bootstrap core CSS -->
+    <link href="scripts/css/bootstrap.min.css" rel="stylesheet">
 
-	    }
-		.navbar {min-height: 0px; margin-bottom: 0px; border: 0px;height: 50px;}
-		.nav>li {display: inline-block;}
-		.navbar-centered .nav > li > a {border: none !important; font-weight: 500 !important;color: white}
-		.navbar-inverse { background-color: steelblue} /* #7B7B7B  #565758*/
-		.navbar-centered .nav > li > a:hover{ background-color: white; color: steelblue;font-weight: 600 !important;}
-		.navbar-centered .nav > li > a::after{ display: block;font-weight: bold;height: 0;overflow:hidden;visibility: hidden;content: attr(title);}
-		.navbar-centered .nav .active > a,.navbar-centered .navbar-nav > .active > a:focus { background-color: white; color: black; font-weight:bold; }
-		.navbar-centered .navbar-nav { float: none; text-align:center; }
-	    .navbar-centered .navbar-nav > li { float: none; }
-	    .navbar-centered .nav > li { display: inline; }
-	    .navbar-centered .nav > li > a {display: inline-block; }
-	    #home { color:ivory; margin-left: 15%; margin-right: 15%;}
-		
-		@media (min-width: 768px) {
-            .navbar-centered .nav > li > a {/* width:15%; */}
-            #home { font-size: 30px}
-            .navbar {
-                            height: auto !important;
+    <style type="text/css">
+        body {
+            font-family: "Helvetica Neue",Helvetica,Arial,sans-serif !important;
+            background: url('scripts/images/cartImages/background_cloth.jpg') no-repeat;
+            padding-top: 50px;
+            font-size: 14px;
+            background-size: 100% 100%;
+            background-attachment: fixed;
+            height: 100vh !important;
+            width: 100% !important;
+            overflow: hidden;
+        }
+
+        .navbar {
+            min-height: 0px;
+            margin-bottom: 0px;
+            border: 0px;
+            height: 50px;
+        }
+
+        .nav > li {
+            display: inline-block;
+        }
+
+        .navbar-centered .nav > li > a {
+            border: none !important;
+            font-weight: 500 !important;
+            color: white
+        }
+
+        .navbar-inverse {
+            background-color: steelblue
+        }
+        /* #7B7B7B  #565758*/
+        .navbar-centered .nav > li > a:hover {
+            background-color: white;
+            color: steelblue;
+            font-weight: 600 !important;
+        }
+
+        .navbar-centered .nav > li > a::after {
+            display: block;
+            font-weight: bold;
+            height: 0;
+            overflow: hidden;
+            visibility: hidden;
+            content: attr(title);
+        }
+
+        .navbar-centered .nav .active > a, .navbar-centered .navbar-nav > .active > a:focus {
+            background-color: white;
+            color: black;
+            font-weight: bold;
+        }
+
+        .navbar-centered .navbar-nav {
+            float: none;
+            text-align: center;
+        }
+
+            .navbar-centered .navbar-nav > li {
+                float: none;
             }
 
-         }
+        .navbar-centered .nav > li {
+            display: inline;
+        }
 
-	    @media (min-width:360px ) and (max-width: 768px){
-	    	.navbar-centered .nav > li > a {font-size: 12px}
-	    	#home { font-size: 20px;margin-top: 226px !important;}
-	    	.navbar {height: 200px}
-	    }
-	    @media (max-width: 360px) {
-	    	.navbar-centered .nav > li > a {font-size: 10px}
-	    	#home { font-size: 15px;margin-top: 165px;}
-	    	.navbar {height: 200px}
-	    }
-	    @media (min-width: 1022px) {
-	    	.modal-dialog { width: 850px}
-	    	#add_shipping { height: 300px }
-	    }
-		.navbar{
-			border-radius: 2px;
-		}
-		
-		@media (max-width: 800px){
-            .navbar {
-                            height: auto !important;
+            .navbar-centered .nav > li > a {
+                display: inline-block;
             }
-            .navbar-centered {
-                            padding-left: 22px !important; 
-            }
-            .productTypes>li {
-                            padding-right: 0;
-            }
-            .btnsListJS {
-                            padding-right: 0 !important; 
-            }
-            .btnsList {
-                            padding-right: 0 !important; 
-            }
+
+        #home {
+            color: ivory;
+            margin-left: 15%;
+            margin-right: 15%;
+        }
+
+        @media (min-width: 768px) {
             #home {
-                            font-size: 20px;
-                            margin-top: 0 !important; 
-                            margin-top: 78px !important;
-                            /* height: 48%; */
-                            position: absolute;
-                            display: table;
+                font-size: 30px
+            }
+
+            .navbar {
+                height: auto !important;
+            }
+        }
+
+        @media (min-width:360px ) and (max-width: 768px) {
+            .navbar-centered .nav > li > a {
+                font-size: 12px
+            }
+
+            #home {
+                font-size: 20px;
+                margin-top: 226px !important;
+            }
+
+            .navbar {
+                height: 200px
+            }
+        }
+
+        @media (max-width: 360px) {
+            .navbar-centered .nav > li > a {
+                font-size: 10px
+            }
+
+            #home {
+                font-size: 15px;
+                margin-top: 165px;
+            }
+
+            .navbar {
+                height: 200px
+            }
+        }
+
+        @media (min-width: 1022px) {
+            .modal-dialog {
+                width: 850px
+            }
+
+            #add_shipping {
+                height: 300px
+            }
+        }
+
+        .navbar {
+            border-radius: 2px;
+        }
+
+        @media (max-width: 800px) {
+            .navbar {
+                height: auto !important;
+            }
+
+            .navbar-centered {
+                padding-left: 22px !important;
+            }
+
+            .productTypes > li {
+                padding-right: 0;
+            }
+
+            .btnsListJS {
+                padding-right: 0 !important;
+            }
+
+            .btnsList {
+                padding-right: 0 !important;
+            }
+
+            #home {
+                font-size: 20px;
+                margin-top: 0 !important;
+                margin-top: 78px !important;
+                position: absolute;
+                display: table;
             }
 
             .homeText {
-                            font-size: 18px !important;
-                            color: #555;
-                            font-weight: 600;
-                            display: table-cell;
-                            vertical-align: middle;
+                font-size: 18px !important;
+                color: #555;
+                font-weight: 600;
+                display: table-cell;
+                vertical-align: middle;
             }
-                                
-         }
+        }
 
+        .navbar-centered {
+            padding-left: 90px;
+        }
 
-		.navbar-centered{
-			padding-left: 90px ;
-		}
-	.productTypes>li
-	{
-    /*padding-right: 35px;*/
-	}
-	.productTypes>li:last-child
-	{
-   /* padding-right: 0px; */
-	}
-     .productTypes>li>a
-	{
-		font-weight: bold;
-   
-    border: 2px solid white;
-    border-radius: 5px;
-    padding: 15px 0 15px 0;
-	}
-    #home
-	{
-		margin-top: 157px;
-		    /*height: 48%;*/
-    position: absolute;
-    display: table;
-	/*display: block;
-    margin-top: 188px;
-    font-size: 20px;
-    color: #555;
-    font-weight: 600;*/
-	}
-	.homeText{
-		font-size: 23px;
-    color: #555;
-    font-weight: 600;
-    display: table-cell;
-    vertical-align: middle;
-	}
-	.textBox{
-		width: 35%;
-		padding-left: 0%;
-	}
-	.scenario
-	{
-		padding-top: 6%;
-		padding-left: 1.5%;
-		display: none;
-	}
-	.invalidCustomerDiv
-	{
-		width: 20%;
-		padding-top: 0.5%;
-	}
-	.invalidCustomerSpan{
-		padding: 0.5%;
-		display: none;
-		background-color: unset;
-		border: none;
-	}
-	.customerIdlabel
-	{
-		padding-top: 1%;
-		width: 22%;
-       padding-right: 0;
-       padding-left: 1.5%;
-       /*font-weight: 100;*/
-	}
-	.modal-content{
-	    width: 500px;
-	    height:  inherit;
-	    margin:  0 auto;
-	}
-	.modal-align-center{
-	    display:  table-cell;
-	    vertical-align: middle;
-	}
-	.modal-align-center-helper{
-	    display: table;
-	    width: 100%;
-	    height: 100%;
-	}
-	#txtCustomerId{
-		height: 28px;
-	}
-	#info
-	{
-		margin-top: 7px;
-		font-size: 16px;
-	}
-	
-	.modal-footer .btn
-	{
-		padding: 3px 6px;
-	}
-	.msgDiv
-	{
-		margin-top: 12px;
-		padding-left: 1.5%;
-	}
-	.center{
-      text-align: center !important;
-    }
-    .paddingB10{
-    padding-bottom: 10px;
-}
-.visa-ui-btn-text{
-  display: flex;
-    border-radius: 0;
-    cursor: pointer!important;
-    font-family: OpenSans,sans-serif;
-    font-size: 100%;
-    outline: 0;
-    transition: background .25s ease;
-    align-items: center;
-    margin-bottom: 12px !important;
-    /*background: #003ea9;*/
-    background: steelblue;
-    border: 0;
-    color: #fff;
-    cursor: pointer;
-    font-weight: 700;
-    justify-content: center;
-    letter-spacing: .05357rem;
-    margin: 0rem .35714rem .14286rem .35714rem;
-    min-height: 50px;
-    min-width: 165px;
-    padding: 6%!important;
-    text-decoration: none;
-    margin-left: 25%;
-    /*border-radius: 10px;*/
-    /*box-shadow: 3px 3px 3px -1px #333*/
-    /*text-transform: uppercase;*/
-}
-button:hover{
-	/*background-color: #052f52;*/
-	background: linear-gradient(steelblue,#052f52);
-	/*color: steelblue;*/
-}
-.containerDiv
-{
-	width: 100%; margin: 0; padding:0
-}
-.JSDiv{
-	width: 90%;margin-left: 3%;
-}
-.tabs{
-text-decoration-line: none !important;color: white !important;font-size:medium; 
-}
-.mTitle{
-text-align: center;font-weight: 600;
-}
+        .productTypes > li > a {
+            font-weight: bold;
+            border: 2px solid white;
+            border-radius: 5px;
+            padding: 15px 0 15px 0;
+        }
 
- 
+        #home {
+            margin-top: 157px;
+            position: absolute;
+            display: table;
+        }
 
- 
+        .homeText {
+            font-size: 23px;
+            color: #555;
+            font-weight: 600;
+            display: table-cell;
+            vertical-align: middle;
+        }
 
-.headerBtnCustomer{
-   width: 176px ;
-    font-size: 18px ;
-    height: 48px;
-}
+        .textBox {
+            width: 35%;
+            padding-left: 0%;
+        }
 
-.headerBtnJs{
-   width: 120px ;
-    font-size: 18px ;
-    height: 48px;
-}
+        .scenario {
+            padding-top: 6%;
+            padding-left: 1.5%;
+            display: none;
+        }
 
-.headerBtnJsUI{
-  width: 135px ;
-    font-size: 18px ;
-    height: 48px;
-}
+        .invalidCustomerDiv {
+            width: 20%;
+            padding-top: 0.5%;
+        }
 
-.headerBtnHosted{
-    width: 135px ;
-    font-size: 18px ;
-    height: 48px;
-}
+        .invalidCustomerSpan {
+            padding: 0.5%;
+            display: none;
+            background-color: unset;
+            border: none;
+        }
 
-.btnsList{
-	padding-right: 8% ;
-}
+        .customerIdlabel {
+            padding-top: 1%;
+            width: 22%;
+            padding-right: 0;
+            padding-left: 1.5%;
+        }
 
-.btnsListJS{
-	padding-right: 7.3%;
-}
+        .modal-content {
+            width: 500px;
+            height: inherit;
+            margin: 0 auto;
+        }
 
-@media (max-width: 768px) {
-.btnsList{
-	padding-right: 0 !important;
-}
-.productTypes>li
-	{
-    padding-right: 10px !important;
-	}
-.btnsListJS{
-width:20% !important;
-	padding-right: 0 !important;
-	  font-size: 13px !important;
-}
-.btnsListUI{
-width:22% !important;
-	padding-right: 0 !important;
-	  font-size: 13px !important;
-}
-.btnsListHS{
-width:25% !important;
-	padding-right:0 !important;
-	  font-size: 13px !important;
-}
-.btnsListCS{
-width:27% !important;
-	padding-right: 0 !important;
-	  font-size: 13px !important;
-}
-.headerBtnCustomer{
-   width: unset !important;
-   
-}
+        .modal-align-center {
+            display: table-cell;
+            vertical-align: middle;
+        }
 
-.headerBtnJs{
-   width: unset !important;
-  
-}
+        .modal-align-center-helper {
+            display: table;
+            width: 100%;
+            height: 100%;
+        }
 
-.headerBtnJsUI{
-  width: unset !important;
-   
-}
+        #txtCustomerId {
+            height: 28px;
+        }
 
-.headerBtnHosted{
-    width: unset !important;
-  
-}
-.navbar-centered{
-			padding-left: 30px !important;
-		}
-}
-@media screen and (max-width: 1024px) and (min-width: 768px){
-.headerBtnCustomer{
-   width: 176px !important;
-    font-size: 18px ;
-    height: 48px;
-}
-}
-	</style>
-	<script src="scripts/js/jquery-2.1.4.min.js"></script>
-	<script src="scripts/js/bootstrap.min.js"></script>
-	<script src="scripts/js/jquery.cookie.js"></script>
-	<script src="scripts/js/app.js"></script>
-	<script src="scripts/js/constants.js"></script>
-	<script src="https://sandbox-assets.secure.checkout.visa.com/checkout-widget/resources/js/integration/v1/sdk.js"></script>
+        #info {
+            margin-top: 7px;
+            font-size: 16px;
+        }
+
+        .modal-footer .btn {
+            padding: 3px 6px;
+        }
+
+        .msgDiv {
+            margin-top: 12px;
+            padding-left: 1.5%;
+        }
+
+        .center {
+            text-align: center !important;
+        }
+
+        .paddingB10 {
+            padding-bottom: 10px;
+        }
+
+        .visa-ui-btn-text {
+            display: flex;
+            border-radius: 0;
+            cursor: pointer !important;
+            font-family: OpenSans,sans-serif;
+            font-size: 100%;
+            outline: 0;
+            transition: background .25s ease;
+            align-items: center;
+            margin-bottom: 12px !important;
+            background: steelblue;
+            border: 0;
+            color: #fff;
+            cursor: pointer;
+            font-weight: 700;
+            justify-content: center;
+            letter-spacing: .05357rem;
+            margin: 0rem .35714rem .14286rem .35714rem;
+            min-height: 50px;
+            min-width: 165px;
+            padding: 6% !important;
+            text-decoration: none;
+            margin-left: 25%;
+        }
+
+        button:hover {
+            background: linear-gradient(steelblue,#052f52);
+        }
+
+        .containerDiv {
+            width: 100%;
+            margin: 0;
+            padding: 0
+        }
+
+        .JSDiv {
+            width: 90%;
+            margin-left: 3%;
+        }
+
+        .tabs {
+            text-decoration-line: none !important;
+            color: white !important;
+            font-size: medium;
+        }
+
+        .mTitle {
+            text-align: center;
+            font-weight: 600;
+        }
+
+        .headerBtnCustomer {
+            width: 176px;
+            font-size: 18px;
+            height: 48px;
+        }
+
+        .headerBtnJs {
+            width: 120px;
+            font-size: 18px;
+            height: 48px;
+        }
+
+        .headerBtnJsUI {
+            width: 135px;
+            font-size: 18px;
+            height: 48px;
+        }
+
+        .headerBtnHosted {
+            width: 135px;
+            font-size: 18px;
+            height: 48px;
+        }
+
+        .btnsList {
+            padding-right: 8%;
+        }
+
+        .btnsListJS {
+            padding-right: 7.3%;
+        }
+
+        @media (max-width: 768px) {
+            .btnsList {
+                padding-right: 0 !important;
+            }
+
+            .productTypes > li {
+                padding-right: 10px !important;
+            }
+
+            .btnsListJS {
+                width: 20% !important;
+                padding-right: 0 !important;
+                font-size: 13px !important;
+            }
+
+            .btnsListUI {
+                width: 22% !important;
+                padding-right: 0 !important;
+                font-size: 13px !important;
+            }
+
+            .btnsListHS {
+                width: 25% !important;
+                padding-right: 0 !important;
+                font-size: 13px !important;
+            }
+
+            .btnsListCS {
+                width: 27% !important;
+                padding-right: 0 !important;
+                font-size: 13px !important;
+            }
+
+            .headerBtnCustomer {
+                width: unset !important;
+            }
+
+            .headerBtnJs {
+                width: unset !important;
+            }
+
+            .headerBtnJsUI {
+                width: unset !important;
+            }
+
+            .headerBtnHosted {
+                width: unset !important;
+            }
+
+            .navbar-centered {
+                padding-left: 30px !important;
+            }
+        }
+
+        @media screen and (max-width: 1024px) and (min-width: 768px) {
+            .headerBtnCustomer {
+                width: 176px !important;
+                font-size: 18px;
+                height: 48px;
+            }
+        }
+    </style>
+    <script src="scripts/js/jquery-3.3.1.min.js"></script>
+    <script src="scripts/js/bootstrap.min.js"></script>
+    <script src="https://sandbox-assets.secure.checkout.visa.com/checkout-widget/resources/js/integration/v1/sdk.js"></script>
 </head>
 <body>
 
